Nav hero overflow fixed

--- a/Flickity/flickity.css
+++ b/Flickity/flickity.css
@@ -6,14 +6,17 @@ https://flickity.metafizzy.co
   position: relative;
 }
 
-.flickity-enabled:focus { outline: none; }
+.flickity-enabled:focus { 
+  outline: none; 
+}
 
 .flickity-viewport {
   position: relative;
-  overflow: auto;
+  overflow: hidden;
 }
 
 .flickity-slider {
+  width: 100%;
 }
 
 /* draggable */
